6_object_oriented_programming/4_prototype/16_understand_the_prototype_chain/output_16.txt
SyntaxError: unknown: Unexpected token (10:0)

   8 | 
   9 | // Fix the code below so that it evaluates to true
> 10 | ???.isPrototypeOf(Dog.prototype);
     | ^
  11 | 